cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(idlcpp LANGUAGES C CXX)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

set(PAF_MEMORY_BACKEND "std" CACHE STRING "Memory backend for pafcore: std, mimalloc, or custom")
set_property(CACHE PAF_MEMORY_BACKEND PROPERTY STRINGS std mimalloc custom)

if(WIN32)
    set(_default_paf_mimalloc_root "D:/reference/mimalloc")
else()
    set(_default_paf_mimalloc_root "/mnt/d/reference/mimalloc")
endif()
set(PAF_MIMALLOC_ROOT "${_default_paf_mimalloc_root}" CACHE PATH "Root directory of the mimalloc source tree")
unset(_default_paf_mimalloc_root)
set(PAF_MIMALLOC_TARGET "" CACHE STRING "Existing CMake target to use for mimalloc. Leave empty to auto-detect or add from PAF_MIMALLOC_ROOT.")

set(PAF_MEMORY_BACKEND_DEFINE 0)
set(PAF_MEMORY_BACKEND_TARGET "")

if(PAF_MEMORY_BACKEND STREQUAL "std")
    set(PAF_MEMORY_BACKEND_DEFINE 0)
    message(STATUS "PAF memory backend: std")
elseif(PAF_MEMORY_BACKEND STREQUAL "mimalloc")
    set(PAF_MEMORY_BACKEND_DEFINE 1)
    message(STATUS "PAF memory backend: mimalloc")

    if(PAF_MIMALLOC_TARGET)
        if(NOT TARGET ${PAF_MIMALLOC_TARGET})
            message(FATAL_ERROR "PAF_MIMALLOC_TARGET='${PAF_MIMALLOC_TARGET}' does not name an existing target.")
        endif()
        set(PAF_MEMORY_BACKEND_TARGET ${PAF_MIMALLOC_TARGET})
        message(STATUS "PAF mimalloc target: ${PAF_MEMORY_BACKEND_TARGET}")
    elseif(TARGET mimalloc-static)
        set(PAF_MEMORY_BACKEND_TARGET mimalloc-static)
        message(STATUS "PAF mimalloc target: ${PAF_MEMORY_BACKEND_TARGET}")
    elseif(TARGET mimalloc)
        set(PAF_MEMORY_BACKEND_TARGET mimalloc)
        message(STATUS "PAF mimalloc target: ${PAF_MEMORY_BACKEND_TARGET}")
    else()
        if(NOT EXISTS "${PAF_MIMALLOC_ROOT}/CMakeLists.txt")
            message(FATAL_ERROR
                "PAF_MEMORY_BACKEND is set to mimalloc, but no mimalloc source tree was found.\n"
                "Set PAF_MIMALLOC_ROOT to a valid mimalloc checkout or provide PAF_MIMALLOC_TARGET.")
        endif()

        set(MI_OVERRIDE OFF CACHE BOOL "Override malloc/free in mimalloc" FORCE)
        set(MI_BUILD_TESTS OFF CACHE BOOL "Build mimalloc tests" FORCE)
        set(MI_BUILD_OBJECT OFF CACHE BOOL "Build mimalloc object target" FORCE)
        set(MI_BUILD_SHARED OFF CACHE BOOL "Build mimalloc shared library" FORCE)
        set(MI_BUILD_STATIC ON CACHE BOOL "Build mimalloc static library" FORCE)

        message(STATUS "PAF mimalloc root: ${PAF_MIMALLOC_ROOT}")
        add_subdirectory("${PAF_MIMALLOC_ROOT}" "${CMAKE_BINARY_DIR}/paf-third-party/mimalloc" EXCLUDE_FROM_ALL)

        if(TARGET mimalloc-static)
            set(PAF_MEMORY_BACKEND_TARGET mimalloc-static)
        elseif(TARGET mimalloc)
            set(PAF_MEMORY_BACKEND_TARGET mimalloc)
        else()
            message(FATAL_ERROR "mimalloc was added from '${PAF_MIMALLOC_ROOT}', but no usable CMake target was produced.")
        endif()
        message(STATUS "PAF mimalloc target: ${PAF_MEMORY_BACKEND_TARGET}")
    endif()
elseif(PAF_MEMORY_BACKEND STREQUAL "custom")
    set(PAF_MEMORY_BACKEND_DEFINE 2)
    message(STATUS "PAF memory backend: custom")
else()
    message(FATAL_ERROR "Unsupported PAF_MEMORY_BACKEND='${PAF_MEMORY_BACKEND}'. Expected std, mimalloc, or custom.")
endif()

if(MSVC)
    add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
endif()

add_subdirectory(idlcpp)
add_subdirectory(paf/pafcore)
add_subdirectory(paf/paflua)
add_subdirectory(test)
